parte 2 practica terminada

--- a/pt2_lab6.ipynb
+++ b/pt2_lab6.ipynb
@@ -64,11 +64,190 @@
     "- **Greenwood, P.E., Gordillo, L.F.** Relación entre modelos estocásticos y su “esqueleto” determinista (fluctuaciones alrededor del equilibrio).  \n",
     "  [aimath.org](https://aimath.org)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9713b430",
+   "metadata": {},
+   "source": [
+    "## **Práctica Parte 2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9166cf5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== (1) Jacobiano simbólico J(S,I) ===\n",
+      "⎡  I⋅β            S⋅β   ⎤\n",
+      "⎢- ─── - μ    γ - ───   ⎥\n",
+      "⎢   N              N    ⎥\n",
+      "⎢                       ⎥\n",
+      "⎢   I⋅β              S⋅β⎥\n",
+      "⎢   ───     -γ - μ + ───⎥\n",
+      "⎣    N                N ⎦\n",
+      "\n",
+      "=== (2) Autovalores simbólicos en ELE (S=N, I=0) ===\n",
+      "λ (mult=1) = beta - gamma - mu\n",
+      "λ (mult=1) = -mu\n",
+      "\n",
+      "=== (3) Parámetros numéricos y equilibrio endémico ===\n",
+      "N = 1000000, beta = 0.6, gamma = 0.2, mu = 0.0001\n",
+      "R0 = beta/(gamma+mu) = 2.998501\n",
+      "R0 > 1 → Existe equilibrio endémico.\n",
+      "S* = 333500.000000\n",
+      "I* = 666500.000000\n",
+      "\n",
+      "=== (3c) Jacobiano numérico en el equilibrio endémico ===\n",
+      "⎡ -0.4   -0.0001⎤\n",
+      "⎢               ⎥\n",
+      "⎣0.3999     0   ⎦\n",
+      "\n",
+      "=== (4) Autovalores numéricos del Jacobiano en el equilibrio endémico ===\n",
+      "λ1 = -0.3999000000\n",
+      "λ2 = -0.0001000000\n",
+      "\n",
+      "=== (5) Resumen solicitado ===\n",
+      "- Jacobiano simbólico mostrado en (1).\n",
+      "- Autovalores simbólicos en ELE mostrados en (2).\n",
+      "- Jacobiano numérico en endémico mostrado en (3c).\n",
+      "- Autovalores numéricos en endémico mostrados en (4).\n",
+      "\n",
+      "=== (Opcional) Diagnóstico de estabilidad (numérico, endémico) ===\n",
+      "Estable (atractor): partes reales negativas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "import numpy as np\n",
+    "\n",
+    "# 1) VARIABLES Y PARAMETROS SIMBOLICOS\n",
+    "S, I = sp.symbols('S I', real=True)\n",
+    "beta, gamma, mu, N = sp.symbols('beta gamma mu N', positive=True, real=True)\n",
+    "\n",
+    "# 1b) ECUACIONES DIFERENCIALES (expresiones sympy)\n",
+    "dS = mu*N - (beta*S*I)/N - mu*S + gamma*I\n",
+    "dI = (beta*S*I)/N - (gamma+mu)*I\n",
+    "\n",
+    "# 1c) MATRICES PARA JACOBIANO\n",
+    "F = sp.Matrix([dS, dI])     # matriz de ecuaciones\n",
+    "X = sp.Matrix([S, I])       # matriz de variables\n",
+    "\n",
+    "# 1d) JACOBIANO SIMBOLICO\n",
+    "J = F.jacobian(X)\n",
+    "\n",
+    "print(\"=== (1) Jacobiano simbólico J(S,I) ===\")\n",
+    "sp.pprint(J)\n",
+    "print()\n",
+    "\n",
+    "# 2) AUTOVALORES SIMBOLICOS EN ELE (S=N, I=0)\n",
+    "J_ELE = J.subs({S: N, I: 0})\n",
+    "eig_ELE = J_ELE.eigenvals()  # dict {eigenvalue: multiplicity}\n",
+    "\n",
+    "print(\"=== (2) Autovalores simbólicos en ELE (S=N, I=0) ===\")\n",
+    "for lam, mult in eig_ELE.items():\n",
+    "    print(f\"λ (mult={mult}) =\", sp.simplify(lam))\n",
+    "print()\n",
+    "\n",
+    "# ============================================\n",
+    "# 3) PARÁMETROS NUMÉRICOS (¡RELLENAR CON TUS VALORES!)\n",
+    "# Ejemplo de referencia (puedes sobreescribir):\n",
+    "# N_val     = 1_000_000\n",
+    "# beta_val  = 0.6\n",
+    "# gamma_val = 0.2\n",
+    "# mu_val    = 0.0001\n",
+    "# ============================================\n",
+    "N_val     = 1_000_000   # <-- COPIA TUS VALORES DE LA PARTE 1\n",
+    "beta_val  = 0.6         # <--\n",
+    "gamma_val = 0.2         # <--\n",
+    "mu_val    = 0.0001      # <--\n",
+    "\n",
+    "param_num = {\n",
+    "    N: N_val,\n",
+    "    beta: beta_val,\n",
+    "    gamma: gamma_val,\n",
+    "    mu: mu_val\n",
+    "}\n",
+    "\n",
+    "# 3a) CALCULO NUMERICO DEL EQUILIBRIO ENDÉMICO (si existe)\n",
+    "# S* = N*(gamma+mu)/beta, I* = N - S*\n",
+    "R0 = beta_val / (gamma_val + mu_val)\n",
+    "S_star = N_val * (gamma_val + mu_val) / beta_val\n",
+    "I_star = N_val - S_star\n",
+    "\n",
+    "print(\"=== (3) Parámetros numéricos y equilibrio endémico ===\")\n",
+    "print(f\"N = {N_val}, beta = {beta_val}, gamma = {gamma_val}, mu = {mu_val}\")\n",
+    "print(f\"R0 = beta/(gamma+mu) = {R0:.6f}\")\n",
+    "if R0 <= 1:\n",
+    "    print(\"⚠️  R0 ≤ 1 → No existe equilibrio endémico positivo (I* ≤ 0).\")\n",
+    "else:\n",
+    "    print(\"R0 > 1 → Existe equilibrio endémico.\")\n",
+    "print(f\"S* = {S_star:.6f}\")\n",
+    "print(f\"I* = {I_star:.6f}\")\n",
+    "print()\n",
+    "\n",
+    "# 3b) JACOBIANO NUMERICO EN EL ENDÉMICO\n",
+    "J_endemic_sym = J.subs(param_num).subs({S: S_star, I: I_star})  # aún objeto sympy, pero numérico\n",
+    "print(\"=== (3c) Jacobiano numérico en el equilibrio endémico ===\")\n",
+    "sp.pprint(sp.N(J_endemic_sym, 10))\n",
+    "print()\n",
+    "\n",
+    "# 4) AUTOVALORES NUMERICOS (NumPy)\n",
+    "J_endemic_np = np.array(J_endemic_sym, dtype=np.float64)  # convertir a array de numpy\n",
+    "eigvals_endemic = np.linalg.eigvals(J_endemic_np)\n",
+    "\n",
+    "print(\"=== (4) Autovalores numéricos del Jacobiano en el equilibrio endémico ===\")\n",
+    "# Pueden ser complejos\n",
+    "for idx, lam in enumerate(eigvals_endemic, 1):\n",
+    "    if abs(lam.imag) < 1e-12:\n",
+    "        print(f\"λ{idx} = {lam.real:.10f}\")\n",
+    "    else:\n",
+    "        print(f\"λ{idx} = {lam.real:.10f} {'+' if lam.imag>=0 else '-'} {abs(lam.imag):.10f} i\")\n",
+    "\n",
+    "# 5) RESUMEN CLARO\n",
+    "print(\"\\n=== (5) Resumen solicitado ===\")\n",
+    "print(\"- Jacobiano simbólico mostrado en (1).\")\n",
+    "print(\"- Autovalores simbólicos en ELE mostrados en (2).\")\n",
+    "print(\"- Jacobiano numérico en endémico mostrado en (3c).\")\n",
+    "print(\"- Autovalores numéricos en endémico mostrados en (4).\")\n",
+    "\n",
+    "# (Opcional) Clasificación de estabilidad simple\n",
+    "def estabilidad_desde_autovalores(vals, tol=1e-12):\n",
+    "    re = [v.real for v in vals]\n",
+    "    if max(re) < -tol:\n",
+    "        return \"Estable (atractor): partes reales negativas.\"\n",
+    "    if min(re) > tol:\n",
+    "        return \"Inestable (repulsor): partes reales positivas.\"\n",
+    "    return \"Silla o caso límite: signos mixtos o cercanos a 0.\"\n",
+    "\n",
+    "print(\"\\n=== (Opcional) Diagnóstico de estabilidad (numérico, endémico) ===\")\n",
+    "print(estabilidad_desde_autovalores(eigvals_endemic))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
